@@ -30,7 +30,11 @@
 module Array :
 sig
 
-(**{6 Base operations}*)
+  (** Array operations.
+
+      @documents Batteries.Data.Containers.Mutable.Array*)
+
+  (**{6 Base operations}*)
   external length : 'a array -> int = "%array_length"
     (** Return the length (number of elements) of the given array. *)
 
@@ -238,8 +242,11 @@ sig
     (** [Array.of_list l] returns a fresh array containing the elements
 	of [l]. *)
 
-  (** {6 Sorting} *)
+  (** {6 Utilities} *)
 
+  val make_compare : ('a -> 'a -> int) -> 'a array -> 'a array -> int
+    (** [make_compare c] generates the lexicographical order on arrays
+	induced by [c]*)
 
   val sort : ('a -> 'a -> int) -> 'a array -> unit
   (** Sort an array in increasing order according to a comparison
@@ -289,131 +296,162 @@ val fast_sort : ('a -> 'a -> int) -> 'a array -> unit
   external unsafe_get : 'a array -> int -> 'a = "%array_unsafe_get"
   external unsafe_set : 'a array -> int -> 'a -> unit = "%array_unsafe_set"
 
+  (**/**)
 
+  (** Capabilities for arrays*)
+  module Cap :
+  sig
+    type ('a, 'b) t 
 
-end
-
-
-module ROArray :
-sig
-
-  (** Read-only arrays. 
-
-      Operations on read-only arrays are as fast as operations on regular arrays.*)
-
-  type 'a t
-    (**The type of read-only arrays containing elements of type ['a].*)
-
-       
-  (**{6 Base operations}*)
-  external length : 'a t -> int = "%array_length"
-      (** Return the length (number of elements) of the given array. *)
+    (**{6 Base operations}*)
+    external length : ('a, [> ]) t -> int = "%array_length"
+	(** Return the length (number of elements) of the given array. *)
       
-  external get : 'a t -> int -> 'a = "%array_safe_get"
-      (** [Array.get a n] returns the element number [n] of array [a].
-	  The first element has number 0.
-	  The last element has number [Array.length a - 1].
-	  You can also write [a.(n)] instead of [Array.get a n].
-	  
-	  Raise [Invalid_argument "index out of bounds"]
-	  if [n] is outside the range 0 to [(Array.length a - 1)]. *)
-    
+    external get : ('a, [> `Read]) t -> int -> 'a = "%array_safe_get"
+	(** [Array.get a n] returns the element number [n] of array [a].
+	    The first element has number 0.
+	    The last element has number [Array.length a - 1].
+	    You can also write [a.(n)] instead of [Array.get a n].
+	    
+	    Raise [Invalid_argument "index out of bounds"]
+	    if [n] is outside the range 0 to [(Array.length a - 1)]. *)
 
-  (**{6 Constructors}*)
+    external set : ('a, [> `Write]) t -> int -> 'a -> unit = "%array_safe_set"
+	(** [Array.set a n x] modifies array [a] in place, replacing
+	    element number [n] with [x].
+	    You can also write [a.(n) <- x] instead of [Array.set a n x].
+	    
+	    Raise [Invalid_argument "index out of bounds"]
+	    if [n] is outside the range 0 to [Array.length a - 1]. *)    
 
-  external of_array : 'a array -> 'a t = "%identity"
-      (** Return a read-only array version of a given array.
-	  Note that these arrays are shared. In other words,
-	  the original array may still be modified. *)
-
-  val init : int -> (int -> 'a) -> 'a t
-    (** [Array.init n f] returns a fresh array of length [n],
-	with element number [i] initialized to the result of [f i].
-	In other terms, [Array.init n f] tabulates the results of [f]
-	applied to the integers [0] to [n-1].
+    (**{6 Constructors}*)
+    external make : int -> 'a -> ('a, _) t = "caml_make_vect"
+	(** [Array.make n x] returns a fresh array of length [n],
+	    initialized with [x].
+	    All the elements of this new array are initially
+	    physically equal to [x] (in the sense of the [==] predicate).
+	    Consequently, if [x] is mutable, it is shared among all elements
+	    of the array, and modifying [x] through one of the array entries
+	    will modify all other entries at the same time.
+	    
+	    Raise [Invalid_argument] if [n < 0] or [n > Sys.max_array_length].
+	    If the value of [x] is a floating-point number, then the maximum
+	    size is only [Sys.max_array_length / 2].*)
 	
-	Raise [Invalid_argument] if [n < 0] or [n > Sys.max_array_length].
-	If the return type of [f] is [float], then the maximum
-	size is only [Sys.max_array_length / 2].*)
+    external create : int -> 'a -> ('a, _) t = "caml_make_vect"
+	(** @deprecated [Array.create] is an alias for {!Array.make}. *)    
 
-  (** {6 Iterators}*)
-  val iter : ('a -> unit) -> 'a t -> unit
-  (** [Array.iter f a] applies function [f] in turn to all
-    the elements of [a].  It is equivalent to
-    [f a.(0); f a.(1); ...; f a.(Array.length a - 1); ()]. *)
+    external of_array  : 'a array -> ('a, _ ) t = "%identity"
+    external to_array  : ('a, [`Read | `Write]) t -> 'a array = "%identity"
 
-  val map : ('a -> 'b) -> 'a t -> 'b t
-  (** [Array.map f a] applies function [f] to all the elements of [a],
-    and builds an array with the results returned by [f]:
-    [[| f a.(0); f a.(1); ...; f a.(Array.length a - 1) |]]. *)
+    external read_only :  ('a, [>`Read])  t -> ('a, [`Read])  t = "%identity"
+    external write_only : ('a, [>`Write]) t -> ('a, [`Write]) t = "%identity"
+	
 
-  val iteri : (int -> 'a -> unit) -> 'a t -> unit
-  (** Same as {!Array.iter}, but the
-    function is applied to the index of the element as first argument,
-    and the element itself as second argument. *)
+    val init : int -> (int -> 'a) -> ('a, _) t
+      (** [Array.init n f] returns a fresh array of length [n],
+	  with element number [i] initialized to the result of [f i].
+	  In other terms, [Array.init n f] tabulates the results of [f]
+	  applied to the integers [0] to [n-1].
+	  
+	  Raise [Invalid_argument] if [n < 0] or [n > Sys.max_array_length].
+	  If the return type of [f] is [float], then the maximum
+	  size is only [Sys.max_array_length / 2].*)
 
-  val mapi : (int -> 'a -> 'b) -> 'a t -> 'b t
-  (** Same as {!Array.map}, but the
-    function is applied to the index of the element as first argument,
-    and the element itself as second argument. *)
-
-  val fold_left : ('a -> 'b -> 'a) -> 'a -> 'b t -> 'a
-  (** [Array.fold_left f x a] computes
-    [f (... (f (f x a.(0)) a.(1)) ...) a.(n-1)],
-    where [n] is the length of the array [a]. *)
-
-  val fold_right : ('b -> 'a -> 'a) -> 'b t -> 'a -> 'a
-  (** [Array.fold_right f a x] computes
-    [f a.(0) (f a.(1) ( ... (f a.(n-1) x) ...))],
-    where [n] is the length of the array [a]. *)
-
-  (**{6 Operations on two arrays}*)
-  val iter2 : ('a -> 'b -> unit) -> 'a t -> 'b t -> unit
-    (** [Array.iter2 f [|a1; ...; an|] [|b1; ...; bn|]] performs
-	calls [f a1 b1; ...; f an bn] in that order.
+  val make_matrix : int -> int -> 'a -> (('a, _)t, _) t
+    (** [Array.make_matrix dimx dimy e] returns a two-dimensional array
+	(an array of arrays) with first dimension [dimx] and
+	second dimension [dimy]. All the elements of this new matrix
+	are initially physically equal to [e].
+	The element ([x,y]) of a matrix [m] is accessed
+	with the notation [m.(x).(y)].
+	
+	Raise [Invalid_argument] if [dimx] or [dimy] is negative or
+	greater than [Sys.max_array_length].
+	If the value of [e] is a floating-point number, then the maximum
+	size is only [Sys.max_array_length / 2]. *)
     
-	@raise Invalid_argument if the length of [a1] does not equal the
-	length of [a2]. *)
+  val create_matrix : int -> int -> 'a ->  (('a, _)t, _) t
+    (** @deprecated [Array.create_matrix] is an alias for {!Array.make_matrix}. *)
 
-  (**{6 Predicates}*)
-  val for_all : ('a -> bool) -> 'a t -> bool
-    (** [for_all p [a1; ...; an]] checks if all elements of the array
-	satisfy the predicate [p].  That is, it returns
-	[ (p a1) && (p a2) && ... && (p an)]. *)
+    (** {6 Iterators}*)
+    val iter : ('a -> unit) -> ('a, [> `Read]) t -> unit
+      (** [Array.iter f a] applies function [f] in turn to all
+	  the elements of [a].  It is equivalent to
+	  [f a.(0); f a.(1); ...; f a.(Array.length a - 1); ()]. *)
 
-  val exists : ('a -> bool) -> 'a t -> bool
-    (** [exists p [a1; ...; an]] checks if at least one element of
-	the array satisfies the predicate [p].  That is, it returns
-	[ (p a1) || (p a2) || ... || (p an)]. *)
+    val map : ('a -> 'b) -> ('a, [>`Read]) t -> ('b, _) t
+      (** [Array.map f a] applies function [f] to all the elements of [a],
+	  and builds an array with the results returned by [f]:
+	  [[| f a.(0); f a.(1); ...; f a.(Array.length a - 1) |]]. *)
+      
+    val iteri : (int -> 'a -> unit) -> ('a, [> `Read]) t -> unit
+      (** Same as {!Array.iter}, but the
+	  function is applied to the index of the element as first argument,
+	  and the element itself as second argument. *)
+      
+    val mapi : (int -> 'a -> 'b) -> ('a, [> `Read]) t -> ('b, _) t
+      (** Same as {!Array.map}, but the
+	  function is applied to the index of the element as first argument,
+	  and the element itself as second argument. *)
 
-  val find : ('a -> bool) -> 'a t -> 'a
-    (** [find p a] returns the first element of array [a]
-	that satisfies the predicate [p].
-	Raise [Not_found] if there is no value that satisfies [p] in the
-	array [a]. *)
+    val fold_left : ('a -> 'b -> 'a) -> 'a -> ('b, [> `Read]) t -> 'a
+      (** [Array.fold_left f x a] computes
+	  [f (... (f (f x a.(0)) a.(1)) ...) a.(n-1)],
+	  where [n] is the length of the array [a]. *)
 
-  val mem : 'a -> 'a t -> bool
-    (** [mem m a] is true if and only if [m] is equal to an element of [a]. *)
+    val fold_right : ('b -> 'a -> 'a) -> ('b, [> `Read]) t -> 'a -> 'a
+      (** [Array.fold_right f a x] computes
+	  [f a.(0) (f a.(1) ( ... (f a.(n-1) x) ...))],
+	  where [n] is the length of the array [a]. *)
 
-  val memq : 'a -> 'a t -> bool
-    (** Same as {!Array.mem} but uses physical equality instead of
-	structural equality to compare array elements.  *)
+    (**{6 Operations on two arrays}*)
+    val iter2 : ('a -> 'b -> unit) -> ('a, [> `Read]) t -> ('b, [> `Read]) t -> unit
+      (** [Array.iter2 f [|a1; ...; an|] [|b1; ...; bn|]] performs
+	  calls [f a1 b1; ...; f an bn] in that order.
+	  
+	  @raise Invalid_argument if the length of [a1] does not equal the
+	  length of [a2]. *)
 
-  val findi : ('a -> bool) -> 'a t -> int
+    (**{6 Predicates}*)
+    val for_all : ('a -> bool) -> ('a, [> `Read]) t -> bool
+      (** [for_all p [a1; ...; an]] checks if all elements of the array
+	  satisfy the predicate [p].  That is, it returns
+	  [ (p a1) && (p a2) && ... && (p an)]. *)
+
+    val exists : ('a -> bool) -> ('a, [> `Read]) t -> bool
+      (** [exists p [a1; ...; an]] checks if at least one element of
+	  the array satisfies the predicate [p].  That is, it returns
+	  [ (p a1) || (p a2) || ... || (p an)]. *)
+      
+    val find : ('a -> bool) -> ('a, [> `Read]) t -> 'a
+      (** [find p a] returns the first element of array [a]
+	  that satisfies the predicate [p].
+	  Raise [Not_found] if there is no value that satisfies [p] in the
+	  array [a]. *)
+
+    val mem : 'a -> ('a, [> `Read]) t -> bool
+      (** [mem m a] is true if and only if [m] is equal to an element of [a]. *)
+
+    val memq : 'a -> ('a, [> `Read]) t -> bool
+      (** Same as {!Array.mem} but uses physical equality instead of
+	  structural equality to compare array elements.  *)
+      
+  val findi : ('a -> bool) -> ('a, [> `Read]) t -> int
     (** [findi p a] returns the index of the first element of array [a]
 	that satisfies the predicate [p].
 	Raise [Not_found] if there is no value that satisfies [p] in the
 	array [a].  *)
 
-  val filter : ('a -> bool) -> 'a t -> 'a t
+  val filter : ('a -> bool) -> ('a, [> `Read]) t -> ('a, _) t
     (** [filter p a] returns all the elements of the array [a]
 	that satisfy the predicate [p].  The order of the elements
 	in the input array is preserved.  *)
 
-  val find_all : ('a -> bool) -> 'a t -> 'a t
+  val find_all : ('a -> bool) -> ('a, [> `Read]) t -> ('a, _) t
     (** [find_all] is another name for {!Array.filter}. *)
 
-  val partition : ('a -> bool) -> 'a t -> 'a t * 'a t
+  val partition : ('a -> bool) -> ('a, [> `Read]) t -> ('a, _) t * ('a, _)t
     (** [partition p a] returns a pair of arrays [(a1, a2)], where
 	[a1] is the array of all the elements of [a] that
 	satisfy the predicate [p], and [a2] is the array of all the
@@ -421,17 +459,20 @@ sig
 	The order of the elements in the input array is preserved. *)
 
   (** {6 Array transformations} *)
-  val rev : 'a t -> 'a array
+  val rev : ('a, [> `Read]) t -> ('a, _) t
     (** Array reversal.*)
 
-  val append : 'a t -> 'a t -> 'a array
+  val rev_in_place : ('a, [`Read | `Write]) t -> unit
+    (** In-place array reversal.  The array argument is updated. *)
+
+  val append : ('a, [> `Read]) t ->  ('a, [> `Read]) t -> ('a, _) t
     (** [Array.append v1 v2] returns a fresh array containing the
 	concatenation of the arrays [v1] and [v2]. *)
     
-  val concat : 'a t list -> 'a array
+  val concat : ('a, [> `Read]) t list -> ('a, _) t
     (** Same as [Array.append], but concatenates a list of arrays. *)
     
-  val sub : 'a t -> int -> int -> 'a array
+  val sub : ('a, [> `Read]) t -> int -> int -> ('a, _) t
     (** [Array.sub a start len] returns a fresh array of length [len],
 	containing the elements number [start] to [start + len - 1]
 	of array [a].
@@ -440,11 +481,18 @@ sig
 	designate a valid subarray of [a]; that is, if
 	[start < 0], or [len < 0], or [start + len > Array.length a]. *)
     
-  val copy : 'a t -> 'a array
+  val copy : ('a, [> `Read]) t -> 'a array
     (** [Array.copy a] returns a copy of [a], that is, a fresh array
 	containing the same elements as [a]. *)
     
-  val blit : 'a t -> int -> 'a array -> int -> int -> unit
+  val fill : ('a, [> `Write]) t -> int -> int -> 'a -> unit
+    (** [Array.fill a ofs len x] modifies the array [a] in place,
+	storing [x] in elements number [ofs] to [ofs + len - 1].
+	
+	Raise [Invalid_argument "Array.fill"] if [ofs] and [len] do not
+	designate a valid subarray of [a]. *)
+
+  val blit : ('a, [> `Read]) t -> int -> ('a, [>`Write]) t -> int -> int -> unit
     (** [Array.blit v1 o1 v2 o2 len] copies [len] elements
 	from array [v1], starting at element number [o1], to array [v2],
 	starting at element number [o2]. It works correctly even if
@@ -457,23 +505,25 @@ sig
     
   (** {6 Conversions} *)
 
-  val enum : 'a t -> 'a Enum.t
+  val enum : ('a, [> `Read]) t -> 'a Enum.t
     (** Returns an enumeration of the elements of an array. *)
 
-  val of_enum : 'a Enum.t -> 'a t
+  val of_enum : 'a Enum.t -> ('a, _) t
     (** Build an array from an enumeration. *)
 
-  val to_list : 'a t -> 'a list
+  val to_list : ('a, [> `Read]) t -> 'a list
     (** [Array.to_list a] returns the list of all the elements of [a]. *)
 
-  val of_list : 'a list -> 'a t
+  val of_list : 'a list -> ('a, _) t
     (** [Array.of_list l] returns a fresh array containing the elements
 	of [l]. *)
 
-  (** {6 Sorting} *)
+  (** {6 Utilities} *)
+  val make_compare : ('a -> 'a -> int) -> ('a, [> `Read]) t -> ('a, [> `Read]) t -> int
+    (** [make_compare c] generates the lexicographical order on arrays
+	induced by [c]*)
 
-
-  val sort : ('a -> 'a -> int) -> 'a t -> 'a array
+  val sort : ('a -> 'a -> int) -> ('a, [> `Read | `Write]) t -> unit
   (** Sort an array in increasing order according to a comparison
     function.  The comparison function must return 0 if its arguments
     compare as equal, a positive integer if the first is greater,
@@ -499,7 +549,7 @@ sig
     -   [cmp a.(i) a.(j)] >= 0 if and only if i >= j
 *)
 
-val stable_sort : ('a -> 'a -> int) -> 'a t -> 'a array
+val stable_sort : ('a -> 'a -> int) -> ('a, [ `Read | `Write]) t -> unit
   (** Same as {!Array.sort}, but the sorting algorithm is stable (i.e.
     elements that compare equal are kept in their original order) and
     not guaranteed to run in constant heap space.
@@ -509,7 +559,7 @@ val stable_sort : ('a -> 'a -> int) -> 'a t -> 'a array
     It is usually faster than the current implementation of {!Array.sort}.
 *)
 
-val fast_sort : ('a -> 'a -> int) -> 'a t -> 'a array
+val fast_sort : ('a -> 'a -> int) -> ('a, [`Read | `Write]) t -> unit
   (** Same as {!Array.sort} or {!Array.stable_sort}, whichever is faster
       on typical input.
   *)
@@ -518,7 +568,9 @@ val fast_sort : ('a -> 'a -> int) -> 'a t -> 'a array
   (**/**)
   (** {6 Undocumented functions} *)
     
-  external unsafe_get : 'a t -> int -> 'a = "%array_unsafe_get"
+  external unsafe_get : ('a, [> `Read]) t -> int -> 'a = "%array_unsafe_get"
+  external unsafe_set : ('a, [> `Write])t -> int -> 'a -> unit = "%array_unsafe_set"
 
+end
 
 end
